Financeiro/main/default/objects/Lancamento__c/Lancamento__c.object-meta.xml
<CustomObject>
    <label>Lançamento</label>
    <nameField>
        <displayFormat>L{000000}</displayFormat>
        <label>Cód. Lançamento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lançamentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>