Financeiro/main/default/objects/Lancamento__c/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentários</label>
    <type>TextArea</type>
</CustomField>