Financeiro/main/default/objects/Lancamento__c/fields/Estimado__c.field-meta.xml
<CustomField>
    <fullName>Estimado__c</fullName>
    <label>Estimado</label>
    <referenceTo>Estimado__c</referenceTo>
    <relationshipLabel>Lançamentos</relationshipLabel>
    <relationshipName>Lancamentos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>