Financeiro/main/default/objects/Lancamento__c/fields/Finalidade__c.field-meta.xml
<CustomField>
    <fullName>Finalidade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finalidade</label>
    <referenceTo>Finalidade__c</referenceTo>
    <relationshipLabel>Lançamentos</relationshipLabel>
    <relationshipName>Lancamentos</relationshipName>
    <type>Lookup</type>
</CustomField>