Financeiro/main/default/objects/Lancamento__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>