Financeiro/main/default/objects/Lancamento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estimado__c</columns>
    <columns>Data__c</columns>
    <columns>Valor__c</columns>
    <columns>Comentarios__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>